correction score verify_ft

--- a/main/model/cnn.ipynb
+++ b/main/model/cnn.ipynb
@@ -2469,7 +2469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 134,
    "id": "5713e3f7",
    "metadata": {},
    "outputs": [
@@ -2484,7 +2484,7 @@
    "source": [
     "# Save model\n",
     "PATH = \"./cnn.pth\"\n",
-    "#torch.save(model.state_dict(), PATH)\n",
+    "torch.save(model.state_dict(), PATH)\n",
     "print(\"Saved: loss_curves.html\")\n"
    ]
   },
